--- a/style/style.css
+++ b/style/style.css
@@ -72,6 +72,10 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 /*--------------------*/
+a:hover {
+  color: #F16D7F;
+}
+
 body {
   font-family: "Lato", sans-serif;
 }
@@ -369,10 +373,12 @@ li {
   height: auto;
   z-index: 2;
   transition: 1s;
+  Filter: brightness(50%);
 }
 
 .catalog__link:hover .catalog__img {
   transform: scale(1.2);
+  filter: brightness(100%);
 }
 
 .last__catalog__item {
@@ -386,10 +392,12 @@ li {
   height: 100%;
   width: 100%;
   transition: 1s;
+  filter: brightness(50%);
 }
 
 .catalog__link:hover .last__catalog__img {
   transform: scale(1.2);
+  filter: brightness(100%);
 }
 
 .catalog__text {
@@ -439,6 +447,10 @@ li {
   align-items: center;
 }
 
+.filters__inner {
+  position: relative;
+}
+
 .filtres__link {
   position: relative;
   font-weight: 600;
@@ -448,7 +460,8 @@ li {
   text-transform: uppercase;
   transition: 0.2s;
 }
-.filtres__link:after {
+
+.filter__burger {
   content: "";
   position: absolute;
   display: block;
@@ -459,24 +472,27 @@ li {
   top: 8px;
   border-radius: 50px 50px;
 }
-.filtres__link .filter__burger:before,
-.filtres__link .filter__burger:after {
+
+.filter__burger:before,
+.filter__burger:after {
   content: "";
   position: absolute;
   display: block;
   height: 2px;
   background-color: #000;
-  left: 48px;
+  left: 0;
   border-radius: 50px 50px;
   transition: 0.2s;
 }
-.filtres__link .filter__burger:before {
-  width: 15px;
-  top: 3px;
-}
-.filtres__link .filter__burger:after {
+
+.filter__burger:before {
   width: 5px;
-  bottom: 3px;
+  top: 4px;
+}
+
+.filter__burger:after {
+  width: 15px;
+  bottom: 4px;
 }
 
 .filtres:hover .filtres__link {
@@ -504,6 +520,10 @@ li {
 }
 
 .filtres:hover .filter__burger:before {
+  background-color: #EF5B70;
+}
+
+.filtres:hover .filter__burger {
   background-color: #EF5B70;
 }
 
@@ -667,7 +687,7 @@ details[open].filters__boxItem__title {
   height: auto;
   background-color: #F8F8F8;
   position: relative;
-  transition: 0.2s linear;
+  transition: 0.5s;
 }
 .cards__item:hover {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
@@ -690,7 +710,7 @@ details[open].filters__boxItem__title {
   left: 0;
   width: 100%;
   opacity: 0;
-  transition: 0.2s;
+  transition: 0.5s;
 }
 
 .cards__btn {
@@ -777,6 +797,34 @@ details[open].filters__boxItem__title {
 .content--btn:hover {
   color: #fff;
   background-color: #F16D7F;
+}
+
+.pagination__nav {
+  display: flex;
+  justify-content: center;
+  margin-top: 48px;
+}
+
+.page-item {
+  border: none;
+}
+.page-item span {
+  color: #000;
+}
+.page-item span:hover {
+  color: #F16D7F;
+}
+
+.page-link {
+  font-size: 16px;
+  line-height: 19px;
+  color: #EBEBEB;
+  border: none;
+}
+
+.page-link:hover {
+  color: #F16D7F;
+  background-color: transparent;
 }
 
 .feature {
@@ -1320,22 +1368,39 @@ input::placeholder {
 
 .productsCards__suptitle {
   margin-top: 64px;
+  position: relative;
   font-weight: 300;
   font-size: 14px;
   line-height: 17px;
   color: #F16D7F;
+  padding-bottom: 15px;
 }
 
 .productsCards__suptitle:after {
   content: "";
   display: block;
+  position: absolute;
   background: #EF5B70;
   width: 63px;
   height: 3px;
-  margin: 12px auto;
+  left: 30%;
+  bottom: -1px;
+}
+
+.productsCards__suptitle:before {
+  content: "";
+  position: absolute;
+  display: block;
+  background: #000;
+  opacity: 0.1;
+  width: 100%;
+  height: 1px;
+  bottom: 0;
+  left: 0;
 }
 
 .productsCards__subtitle {
+  margin-top: 18px;
   font-weight: 300;
   font-size: 18px;
   line-height: 22px;
@@ -1464,6 +1529,26 @@ input::placeholder {
   box-shadow: 17px 19px 24px rgba(0, 0, 0, 0.13);
 }
 
+.cartCards__close:before,
+.cartCards__close:after {
+  position: absolute;
+  right: 3%;
+  top: 12%;
+  content: "";
+  display: block;
+  width: 20px;
+  height: 2px;
+  background-color: #000;
+}
+
+.cartCards__close:before {
+  transform: rotate(45deg);
+}
+
+.cartCards__close:after {
+  transform: rotate(-45deg);
+}
+
 .cartCards__content {
   text-align: left;
   padding: 22px 100px 62px 31px;
@@ -1511,12 +1596,13 @@ input::placeholder {
   background-color: #fff;
   border: 1px solid #A4A4A4;
   transition: 0.2s;
+  text-transform: uppercase;
 }
 
 .cart--btn:hover {
   background-color: #F16D7F;
   color: #fff;
-  border: none;
+  border: 1px solid #F16D7F;
 }
 
 .cart__form {
@@ -1617,18 +1703,39 @@ input::placeholder {
   .registration__content {
     margin-left: 22px;
   }
+
+  .cart__inner {
+    justify-content: space-around;
+  }
+
+  .cart__form__inner {
+    margin-top: 30px;
+    align-items: center;
+    display: flex;
+  }
+
+  .cart__total {
+    margin-top: 0;
+    margin-left: 10px;
+  }
 }
 @media (max-width: 853px) {
   .cart__inner {
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    justify-content: center;
+  }
+
+  .cartCards__item {
+    width: 100%;
+  }
+
+  .cart__form__inner {
+    display: flex;
+    justify-content: space-between;
   }
 
   .cart__form {
-    margin-top: 50px;
-    display: flex;
-    justify-content: space-around;
+    margin-right: 15px;
   }
 }
 @media (max-width: 768px) {
@@ -1713,8 +1820,21 @@ input::placeholder {
   .cards__none {
     display: none;
   }
+
+  .cart__button {
+    display: flex;
+    justify-content: space-around;
+  }
 }
 @media (max-width: 600px) {
+  .cart__form__inner {
+    flex-direction: column;
+  }
+
+  .cart__total {
+    margin-top: 30px;
+  }
+
   .intro__inner {
     justify-content: center;
   }
@@ -1804,6 +1924,86 @@ input::placeholder {
     border: none;
     border-bottom: 1px solid #EAEAEA;
   }
+
+  .cartCards__item {
+    width: 100%;
+    height: 188px;
+  }
+
+  .cartCards__img {
+    width: 143.86px;
+    height: 188px;
+  }
+
+  .cartCards__content {
+    text-align: left;
+    padding: 13px 40px 0 17px;
+  }
+  .cartCards__content h4 {
+    font-size: 16px;
+    line-height: 19px;
+    margin-bottom: 25px;
+  }
+  .cartCards__content p {
+    font-size: 14px;
+    line-height: 17px;
+    margin-bottom: 3px;
+  }
+
+  .cart--btn {
+    width: 49%;
+    height: 33px;
+    padding: 8px 17px;
+    font-weight: 300;
+    font-size: 12px;
+    line-height: 14px;
+    text-transform: capitalize;
+  }
+
+  .filtres__link {
+    display: none;
+  }
+
+  .filter__burger {
+    content: "";
+    position: absolute;
+    display: block;
+    width: 20px;
+    height: 4px;
+    background-color: #000;
+    left: 0;
+    top: 8px;
+    border-radius: 50px 50px;
+  }
+
+  .filter__burger:before,
+.filter__burger:after {
+    content: "";
+    position: absolute;
+    display: block;
+    height: 4px;
+    background-color: #000;
+    left: 0;
+    border-radius: 50px 50px;
+    transition: 0.2s;
+  }
+
+  .filter__burger:before {
+    width: 10px;
+    top: 10px;
+  }
+
+  .filter__burger:after {
+    width: 37px;
+    bottom: 10px;
+  }
+
+  .singlefilter__link {
+    font-size: 12px;
+    line-height: 14px;
+    margin-left: 0;
+    margin-right: 50px;
+  }
 }
 @media (max-width: 375px) {
   .intro__title {
@@ -1821,8 +2021,16 @@ input::placeholder {
   .input--btn {
     width: 80px;
   }
+
+  .cart__inner {
+    display: flex;
+  }
 }
 @media (max-width: 320px) {
+  .container {
+    padding: 0;
+  }
+
   .form__inner {
     margin-bottom: 20px;
   }
