--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -1028,7 +1028,7 @@ details[open].filters__boxItem__title {
   height: 49px;
   border-radius: 50px 0 0 50px;
   background: #E1E1E1;  
-   padding-left: 22px;
+   padding: 22px;
    font-size: 14px;
   line-height: 17px;
 }
@@ -1190,7 +1190,7 @@ input::placeholder {
   width: 360px;
   height: 45px;
   border: 1px solid #A4A4A4;
-  padding-left: 17px;
+  padding: 17px;
 }
 
 .form__text {
@@ -1729,7 +1729,7 @@ align-items: center;
 }
 
 .cart__input {
-   padding-left: 16px;
+   padding: 16px;
   width: 360px;
   height: 45px;
   border: 1px solid #A4A4A4;
