--- a/style/style.css
+++ b/style/style.css
@@ -1730,6 +1730,10 @@ input::placeholder {
   opacity: 1;
 }
 
+p {
+  margin-bottom: 0;
+}
+
 @media (max-width: 1024px) {
   .registration__content {
     margin-left: 22px;
@@ -1874,6 +1878,14 @@ input::placeholder {
     justify-content: space-around;
   }
 }
+
+@media (max-width: 769px) {
+  .products__cards {
+    flex-direction: column;
+    align-items: center;
+}
+}
+
 @media (max-width: 600px) {
   .cart__form__inner {
     flex-direction: column;
